Fix word wrap bug on API key management

--- a/src/app/components/configuration/keys/keys.scss
+++ b/src/app/components/configuration/keys/keys.scss
@@ -1,6 +1,7 @@
 #secret-modal {
 
   width: 40% !important;
+  word-wrap: break-word;
 
   #secret-modal-body {
     padding-top: 10px;
